--- a/src/components/sections/ConnectContent.astro
+++ b/src/components/sections/ConnectContent.astro
@@ -10,7 +10,7 @@ const d = description && (await marked.parse(description));
 const t = text_content && (await marked.parse(text_content));
 ---
 
-<div class:list={[styles, "flex items-center flex-col"]}>
+<div class:list={[styles?.container, "flex items-center flex-col"]}>
   <h1 class:list={[styles?.title, "text-4xl text-center"]}>{title}</h1>
   {
     d ? (
@@ -24,7 +24,7 @@ const t = text_content && (await marked.parse(text_content));
     class:list={[
       styles?.content,
       "prose-p:mt-0",
-      "prose-li:marker:text-linaro-yellow",
+      "prose-li:marker:text-linaro-yellow break-inside-avoid",
     ]}
     set:html={t}
   />
