--- a/src/components/sections/ConnectContent.astro
+++ b/src/components/sections/ConnectContent.astro
@@ -27,6 +27,7 @@ const t = text_content && (await marked.parse(text_content));
           "prose-p:mt-0",
           "prose-li:mt-0",
           "prose-ol:mt-0",
+          "prose-ul:break-inside-avoid",
           "prose-li:break-inside-avoid",
           "prose-li:marker:text-linaro-yellow",
         ]}
@@ -36,11 +37,7 @@ const t = text_content && (await marked.parse(text_content));
   ) : (
     <div class:list={[styles?.container, "flex items-center flex-col"]}>
       <h1 class:list={[styles?.title, "text-4xl text-center"]}>{title}</h1>
-      <AccordionDrawer
-        client:load
-        id="code-of-conduct-text"
-        content={text_content}
-      />
+      <AccordionDrawer client:load id="code-of-conduct-text" content={t} />
     </div>
   )
 }
