center connect hero img

--- a/src/components/hero/ConnectHero.astro
+++ b/src/components/hero/ConnectHero.astro
@@ -21,7 +21,7 @@ const markdown = description && (await marked.parse(description));
         alt="Linaro Connect background"
         width={2800}
         height={400}
-        class="m-0"
+        class="m-0 mx-auto w-full"
       />
       {inner_image && (
         <div class="absolute top-0 left-0 w-full h-full flex justify-center items-center text-center">
