fix mobile css issues

--- a/src/components/sections/CardGrid.astro
+++ b/src/components/sections/CardGrid.astro
@@ -49,7 +49,7 @@ const { cards, styles, divider } = Astro.props;
             )}
           </li>
           {divider && !isLast && (
-            <li class="not-prose w-[2px] bg-gradient-to-b from-transparent via-white to-transparent opacity-50 mx-4" />
+            <li class="not-prose w-[100px] h-[2px] bg-gradient-to-r md:bg-gradient-to-b from-transparent via-white to-transparent opacity-50 my-4 md:w-[2px] md:h-[160px] md:mx-4" />
           )}
         </>
       );
