--- a/src/components/forms/ContactModal.astro
+++ b/src/components/forms/ContactModal.astro
@@ -2,7 +2,9 @@
 import ContactForm from "./ContactForm.astro";
 import ServicesFormFields from "./ServicesFormFields.astro";
 
-const { modal_id, form_id, button_text, description } = Astro.props;
+const { modal_id, form_id, formName, button_text, description } = Astro.props;
+
+console.log(modal_id, form_id, description);
 ---
 
 <style lang="scss">
@@ -33,6 +35,7 @@ const { modal_id, form_id, button_text, description } = Astro.props;
         form_id={form_id}
         description={description}
         modal_id={modal_id}
+        formName={formName}
       >
         {
           () => {
