--- a/src/components/forms/InsightForm.astro
+++ b/src/components/forms/InsightForm.astro
@@ -6,12 +6,11 @@ const { modal_id } = Astro.props;
   <form
     class="flex flex-col items-start gap-8"
     id="insight-form"
-    action="https://linaro.us3.list-manage.com/subscribe/post?u=14baaae786342d0d405ee59c2&amp;id=bcfa4abc8f" method="post"
+    action="https://linaro.us3.list-manage.com/subscribe/post?u=14baaae786342d0d405ee59c2&id=bcfa4abc8f"
+    method="post"
   >
     <p class="text-3xl text-white my-2 font-bold">Linaro Insights Newsletter</p>
-    <label for="EMAIL" class="text-white">
-      Email address
-    </label>
+    <label for="EMAIL" class="text-white"> Email address </label>
     <input
       type="email"
       name="EMAIL"
@@ -20,11 +19,24 @@ const { modal_id } = Astro.props;
       placeholder="name@example.com"
       class="text-black pl-2 h-12 w-full"
     />
-    <div hidden="true"><input type="hidden" name="tags" value="10067453"></div>
-    <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_14baaae786342d0d405ee59c2_bcfa4abc8f" tabindex="-1" value=""></div>
+    <div hidden="true">
+      <input type="hidden" name="tags" value="10067453" />
+      <input type="hidden" name="formName" value="newsletter" />
+    </div>
+    <div style="position: absolute; left: -5000px;" aria-hidden="true">
+      <input
+        type="text"
+        name="b_14baaae786342d0d405ee59c2_bcfa4abc8f"
+        tabindex="-1"
+        value=""
+      />
+    </div>
     <div>
       <p class="text-white">Marketing Permissions</p>
-      <p class="text-white">Linaro Insights is a monthly newsletter. Please tick the box below to confirm you are happy to receive email communication from Linaro.</p>
+      <p class="text-white">
+        Linaro Insights is a monthly newsletter. Please tick the box below to
+        confirm you are happy to receive email communication from Linaro.
+      </p>
       <input
         type="checkbox"
         name="email"
@@ -32,36 +44,61 @@ const { modal_id } = Astro.props;
         class="mr-2"
         required
       />
-      <label for={modal_id ? `email-${modal_id}` : "email"} class="text-white">Email</label>
-      <p class="text-white">You can unsubscribe at any time by clicking the link in the footer of our emails. For information about our privacy practices, please visit our website.</p>
-      <p class="text-white">We use Mailchimp as our marketing platform. By clicking below to subscribe, you acknowledge that your information will be transferred to Mailchimp for processing. <a href="https://mailchimp.com/legal/terms">Learn more about Mailchimp's privacy practices here.</a>
-    </div>
-    <div class="flex gap-8">
-      <button type="submit" class="linaro-gradient-button" id="contact-submit"
-        >Subscribe</button
+      <label for={modal_id ? `email-${modal_id}` : "email"} class="text-white"
+        >Email</label
       >
-
-      <button
-        type="button"
-        class="linaro-gradient-button flex justify-start items-center gap-2 hidden"
-        id="contact-submitting"
-      >
-        <svg
-          aria-hidden="true"
-          class="w-4 h-4 text-gray-200 animate-spin fill-white"
-          viewBox="0 0 100 101"
-          fill="none"
-          xmlns="http://www.w3.org/2000/svg"
+      <p class="text-white">
+        You can unsubscribe at any time by clicking the link in the footer of
+        our emails. For information about our privacy practices, please visit
+        our website.
+      </p>
+      <p class="text-white">
+        We use Mailchimp as our marketing platform. By clicking below to
+        subscribe, you acknowledge that your information will be transferred to
+        Mailchimp for processing. <a href="https://mailchimp.com/legal/terms"
+          >Learn more about Mailchimp's privacy practices here.</a
         >
-          <path
-            d="M100 50.5908C100 78.2051 77.6142 100.591 50 100.591C22.3858 100.591 0 78.2051 0 50.5908C0 22.9766 22.3858 0.59082 50 0.59082C77.6142 0.59082 100 22.9766 100 50.5908ZM9.08144 50.5908C9.08144 73.1895 27.4013 91.5094 50 91.5094C72.5987 91.5094 90.9186 73.1895 90.9186 50.5908C90.9186 27.9921 72.5987 9.67226 50 9.67226C27.4013 9.67226 9.08144 27.9921 9.08144 50.5908Z"
-            fill="currentColor"></path>
-          <path
-            d="M93.9676 39.0409C96.393 38.4038 97.8624 35.9116 97.0079 33.5539C95.2932 28.8227 92.871 24.3692 89.8167 20.348C85.8452 15.1192 80.8826 10.7238 75.2124 7.41289C69.5422 4.10194 63.2754 1.94025 56.7698 1.05124C51.7666 0.367541 46.6976 0.446843 41.7345 1.27873C39.2613 1.69328 37.813 4.19778 38.4501 6.62326C39.0873 9.04874 41.5694 10.4717 44.0505 10.1071C47.8511 9.54855 51.7191 9.52689 55.5402 10.0491C60.8642 10.7766 65.9928 12.5457 70.6331 15.2552C75.2735 17.9648 79.3347 21.5619 82.5849 25.841C84.9175 28.9121 86.7997 32.2913 88.1811 35.8758C89.083 38.2158 91.5421 39.6781 93.9676 39.0409Z"
-            fill="currentFill"></path>
-        </svg>
-        Submitting</button
-      >
+      </p>
+      <div class="flex gap-8">
+        <button type="submit" class="linaro-gradient-button" id="contact-submit"
+          >Subscribe</button
+        >
+
+        <button
+          type="button"
+          class="linaro-gradient-button flex justify-start items-center gap-2 hidden"
+          id="contact-submitting"
+        >
+          <svg
+            aria-hidden="true"
+            class="w-4 h-4 text-gray-200 animate-spin fill-white"
+            viewBox="0 0 100 101"
+            fill="none"
+            xmlns="http://www.w3.org/2000/svg"
+          >
+            <path
+              d="M100 50.5908C100 78.2051 77.6142 100.591 50 100.591C22.3858 100.591 0 78.2051 0 50.5908C0 22.9766 22.3858 0.59082 50 0.59082C77.6142 0.59082 100 22.9766 100 50.5908ZM9.08144 50.5908C9.08144 73.1895 27.4013 91.5094 50 91.5094C72.5987 91.5094 90.9186 73.1895 90.9186 50.5908C90.9186 27.9921 72.5987 9.67226 50 9.67226C27.4013 9.67226 9.08144 27.9921 9.08144 50.5908Z"
+              fill="currentColor"></path>
+            <path
+              d="M93.9676 39.0409C96.393 38.4038 97.8624 35.9116 97.0079 33.5539C95.2932 28.8227 92.871 24.3692 89.8167 20.348C85.8452 15.1192 80.8826 10.7238 75.2124 7.41289C69.5422 4.10194 63.2754 1.94025 56.7698 1.05124C51.7666 0.367541 46.6976 0.446843 41.7345 1.27873C39.2613 1.69328 37.813 4.19778 38.4501 6.62326C39.0873 9.04874 41.5694 10.4717 44.0505 10.1071C47.8511 9.54855 51.7191 9.52689 55.5402 10.0491C60.8642 10.7766 65.9928 12.5457 70.6331 15.2552C75.2735 17.9648 79.3347 21.5619 82.5849 25.841C84.9175 28.9121 86.7997 32.2913 88.1811 35.8758C89.083 38.2158 91.5421 39.6781 93.9676 39.0409Z"
+              fill="currentFill"></path>
+          </svg>
+          Submitting</button
+        >
+        {
+          modal_id && (
+            <button
+              class="text-white font-bold"
+              onclick={`window.${modal_id}.close()`}
+            >
+              Close
+            </button>
+          )
+        }
+      </div>
+    </div>
+    <div id="contact-feedback" class="hidden">
+      <p id="contact-feedback-text" class="text-white"></p>
       {
         modal_id && (
           <button
@@ -74,17 +111,4 @@ const { modal_id } = Astro.props;
       }
     </div>
   </form>
-  <div id="contact-feedback" class="hidden">
-    <p id="contact-feedback-text" class="text-white"></p>
-    {
-      modal_id && (
-        <button
-          class="text-white font-bold"
-          onclick={`window.${modal_id}.close()`}
-        >
-          Close
-        </button>
-      )
-    }
-  </div>
 </div>
