changes to spacing and copy

--- a/src/components/hero/ConnectHero.astro
+++ b/src/components/hero/ConnectHero.astro
@@ -56,7 +56,7 @@ const currentPath = Astro.url.pathname;
       )}
     </div>
   ) : (
-    <div class="relative w-full h-[500px] overflow-hidden border-b-[10px] border-b-[#ffce00] border-solid">
+    <div class="relative w-full h-[540px] lg:h-[500px] overflow-hidden border-b-[10px] border-b-[#ffce00] border-solid">
       <video
         autoplay
         muted
