--- a/src/components/sections/TeamMembers.astro
+++ b/src/components/sections/TeamMembers.astro
@@ -6,27 +6,48 @@ import MemberCard from "../common/MemberCard.astro";
 
 type Props = z.infer<typeof teamSchema>;
 
-const { members, title } = Astro.props;
+const { members, title, id } = Astro.props;
 const people = await getEntries(members);
-
 ---
+
 {
-  title && (
-    <h2 class="text-4xl text-white mb-16 text-center">{title}</h2>
+  id === "speakers" ? (
+    <div>
+      {title && <h2 class="text-4xl text-white mb-16 text-center">{title}</h2>}
+      <ul
+        class="gap-2 justify-center flex flex-wrap"
+        style="align-items: stretch; display: flex; justify-content: stretch"
+      >
+        {people.map((x) => (
+          <MemberCard
+            id={x.slug + Astro.props.id}
+            id2={id}
+            name={x.data.name}
+            title={x.data.title}
+            image={x.data.image}
+            company={x.data.company}
+            info={x.body}
+          />
+        ))}
+      </ul>
+    </div>
+  ) : (
+    <div>
+      {title && <h2 class="text-4xl text-white mb-16 text-center">{title}</h2>}
+      <ul
+        class="gap-2 justify-center flex flex-wrap"
+        style="align-items: stretch; display: flex; justify-content: stretch"
+      >
+        {people.map((x) => (
+          <MemberCard
+            id={x.slug + Astro.props.id}
+            name={x.data.name}
+            title={x.data.title}
+            image={x.data.image}
+            info={x.body}
+          />
+        ))}
+      </ul>
+    </div>
   )
 }
-<ul class="gap-2 justify-center flex flex-wrap" style="align-items: stretch; display: flex; justify-content: stretch">
-  {
-    people.map((x) => {
-      return (
-        <MemberCard
-          id={x.slug+Astro.props.id}
-          name={x.data.name}
-          title={x.data.title}
-          image={x.data.image}
-          info={x.body}
-        />
-      );
-    })
-  }
-</ul>
