--- a/src/components/hero/ConnectHero.astro
+++ b/src/components/hero/ConnectHero.astro
@@ -35,7 +35,7 @@ const currentPath = Astro.url.pathname;
                 { href: "/connect", label: "Connect Home" },
                 { href: "/connect/registration", label: "Registration" },
                 {
-                  href: "/connect/call-for-proposals",
+                  href: "/connect/schedule",
                   label: "Call for Proposals",
                 },
                 { href: "/connect/sponsorship", label: "Sponsorship" },
@@ -84,7 +84,7 @@ const currentPath = Astro.url.pathname;
             { href: "/connect", label: "Connect Home" },
             { href: "/connect/registration", label: "Registration" },
             {
-              href: "/connect/call-for-proposals",
+              href: "/connect/schedule",
               label: "Call for Proposals",
             },
             { href: "/connect/sponsorship", label: "Sponsorship" },
