--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -137,7 +137,7 @@ const { title, description, type = "website", image } = Astro.props;
                   return res.json();
                 })
                 .then((webinarData) => {
-                  const { passcode, link } = webinarData;
+                  const { passcode, url } = webinarData;
                   feedbackText!.innerHTML = `
       <div class="space-y-4 text-center">
         <p class="text-base">Thank you! Please use the passcode below to access the webinar.</p>
@@ -146,7 +146,7 @@ const { title, description, type = "website", image } = Astro.props;
           <div class="text-2xl font-bold text-blue-700">${passcode}</div>
         </div>
         <div>
-          <a href="${link}" class="inline-block text-xl text-blue-700 font-semibold underline" target="_blank">
+          <a href="${url}" class="inline-block text-xl text-blue-700 font-semibold underline" target="_blank">
             Link to webinar recording
           </a>
         </div>
